Declared rules to the background script added

--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
     "name": "Trello View Changer",
     "version": "1.0",
     "description": "Trello appearance changer",
+    "permissions": ["declarativeContent", "storage"],
     "background": {
         "scripts": [
             "card-width.js"
