--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
         "persistent": false
     },
     "page_action": {
-        "default_popup": "popup.html",
+        "default_popup": "popup/popup.html",
         "default_icon": {
             "16": "images/get_started16.png",
             "32": "images/get_started32.png",
@@ -22,7 +22,7 @@
             "128": "images/get_started128.png"
         }
     },
-    "options_page": "options.html",
+    "options_page": "options/options.html",
     "icons": {
         "16": "images/get_started16.png",
         "32": "images/get_started32.png",
