--- a/manifest.json
+++ b/manifest.json
@@ -16,18 +16,18 @@
     "page_action": {
         "default_popup": "popup/popup.html",
         "default_icon": {
-            "16": "images/get_started16.png",
-            "32": "images/get_started32.png",
-            "48": "images/get_started48.png",
-            "128": "images/get_started128.png"
+            "16": "images/icons8-trello-16.png",
+        "32": "images/icons8-trello-32.png",
+        "48": "images/icons8-trello-48.png",
+        "128": "images/icons8-trello-128.png"
         }
     },
     "options_page": "options/options.html",
     "icons": {
-        "16": "images/get_started16.png",
-        "32": "images/get_started32.png",
-        "48": "images/get_started48.png",
-        "128": "images/get_started128.png"
+        "16": "images/icons8-trello-16.png",
+        "32": "images/icons8-trello-32.png",
+        "48": "images/icons8-trello-48.png",
+        "128": "images/icons8-trello-128.png"
     },
     "content_scripts": [
         {
